deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
  creationTimestamp: "2021-04-12T12:37:01Z"
  generation: 2
  labels:
    run: rearc
  name: rearc
  namespace: default
  resourceVersion: "13586632"
  selfLink: /apis/apps/v1/namespaces/default/deployments/rearch
  uid: 758f9dfb-24c6-4072-a35d-76517a01a78e
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: rearc
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: rearc
    spec:
      containers:
      - image: leventelibal/rearch:v11
        imagePullPolicy: IfNotPresent
        name: rearc
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2021-04-12T12:41:27Z"
    lastUpdateTime: "2021-04-12T12:41:27Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2021-04-12T12:37:01Z"
    lastUpdateTime: "2021-04-12T12:41:27Z"
    message: ReplicaSet "rearch-6f9fccfd78" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
