svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rearc
spec:
  selector:
    run: rearc
  ports:
    - port: 3000
      targetPort: 3000
  type: LoadBalancer
