ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tls-ingress
spec:
  tls: 
  - secretName: tls-ingress-secret
  backend:
    serviceName: rearch
    servicePort: 443
